# parallel-and-distributed-system-test

./: .gitignore  CMakeLists.txt  Makefile  Queue.hpp  README.md  SecureQueue.hpp  SecureStream.cpp  Skyline.cpp  Skyline.hpp  Stream.cpp  Stream.hpp  Utils.cpp  Utils.hpp  Workers.cpp  implementation.tex  introduction.tex  main.cpp  main.tex  par_arch_design.tex  perf_modeling.tex  phi.sh  times.txt  types.hpp  validation.tex
assets/: tame_table.tex
diagrams/: parallel.tex
report/: conclusion.tex  introduction.tex  main.tex  par_arch_design.tex  perf_modeling.tex  validation.tex
report/assets/: time_table.tex
src/: Queue.hpp  SecureQueue.hpp  SecureStream.cpp  SecureStream.hpp  Stream.cpp  Stream.hpp  Task.cpp  Task.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp  Workers.cpp  Workers.hpp  fastflow.hpp  main.cpp  parallel.hpp  sequential.hpp  types.hpp
validation/: validation.xlsx
